2.0.6
	+ Typo fix to run cron job when the period says to do
	+ Set default order for dashboard widgets
2.0.5
	+ Set hostname as default value for server name
	+ Minor message changes
	+ Correct case for sql column names
2.0.4
	+ Fixed bad hour bug in remoteservices cron file generation
2.0.3
	+ Allow insecure clients (bad renegotiation CVE-2009-3555) until
	  Zentyal Cloud clients have the problem fixed.
	+ Do not save Apache module in module restarts as GUI already do
	  it at the end of saving modules stage
	+ Set random times for cron tasks
	+ Bugfix: Remote access is again passwordless after changing our
	  brand
	+ Bugfix: Asked for the subscription level after subscription
	  during saving changes stage to avoid showing up commercial
	  messages when they should not
	+ Bugfix: Added pageTitle property to remote support access page
2.0.2
	+ Handle exceptions in subscription levels SOAP calls
2.0.1
	+ Added API to query to internal nameserver
	+ Added API to know the subscription level
	+ Added API to know the add-on server has
	+ Switch to cloud.zentyal.com
2.0
	+ Fixed bug cleaning CC control jobs, added facilities for
	internal and no-CC job
1.5.8
	+ Check package installed with libapt-pkg-perl
	+ Mark squid as changed, if enabled, when subscription process is
	  done
	+ Add installer script execution after saving changes to make sure
	  VPN is up and running
	+ Bugfix: Speed up the subscription process when VPN is not set up
	  yet
1.5.7
	+ Zentyal rebrand
	+ I18n the commercial message
1.5.6
	+ More robust report method
	+ New commercial messages
1.5.5
	+ Bugfix: Test if /var/run/screen exists before changing its
	  permissions
	+ Bugfix: Work when there is nothing to report yet
1.5.4
	+ Fix bug to pass conf keys to the execute procedures after extracting
	  the bundle
1.5.3
	+ Password strength checker done every week included in report and
	  alert generated with the result
	+ Added support for ebox-qa apt sources