@@ -1,3 +1,8 @@
+HEAD
+	+ Added backup/restore of subscription credentials
+	+ Added API to get the list of registered Zentyal servers
+	+ Added API to get the backup credentials if available
+	+ Added API to know if the disaster recovery add-on is on
 2.0.6
 	+ Typo fix to run cron job when the period says to do
 	+ Set default order for dashboard widgets
